src/views/Search/Search.css
body {
  background-color: rgba(52, 73, 94, 1);
}

nav {
  background: #d3d3d3;
  display: flex;
  justify-content: space-between;
}

.monospace {
  font-family: monospace;
  margin-top: -8px;
  display: block;
}

.error-text {
  color: red;
  margin-bottom: 5%;
}

label {
  padding-left: 6px;
}

.link {
  color: #001a5b;
  margin-top: 5px;
  margin-bottom: 5px;
  margin-right: 5px;
  margin-left: 5px;
}

.container-search {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  color: white;
}

.search-criteria {
  margin: 10% 20%;
}

form input[type="submit"],
form button {
  padding: 4px 10px;
  width: 100px;
  color: rgba(52, 73, 94, 1);
  text-shadow: 1px 1px 1px white;
  transition: 0.5s;
  cursor: pointer;
}

form input[type="submit"]:hover,
form button:hover {
  /*transform: translateY(-3px);*/
  box-shadow: 0 2px 2px -2px black;
}

form input[type="submit"]:active,
form button:active {
  background: yellow;
}

.search-criteria-form {
  text-align: center;
  margin-top: 40px;
}

table {
  margin: 10px auto;
}

label {
  margin-right: 15px;
}

input[type="search"] {
  padding: 3px 5px;
  border-radius: 3px;
  border: 1px solid #eee;
}

button,
.submitButton {
  font-size: 16px;
  margin: 2px;
}

/*button:active,
.submitButton:active {
  background: yellow;
}*/

.no-results {
  text-align: center;
}

.keywords-section {
  margin-top: 2px;
  margin-bottom: 2px;
}

.tag {
  border: 1px solid black;
  border-radius: 2%;
  padding: 1%;
  background: #a9a9a9;
  display: inline-block;
  text-align: center;
  margin: 0em;
  font: 400 13.3333px Arial;
}

.x-tag {
  font-size: 10px;
  width: 16px;
  height: 20px;
  padding: 5px 10px 14px 5px;
}

@media (max-width: 480px) {
  .search-criteria {
    width: 90%;
    margin: 10% auto;
  }
}

